# yunpa

./: .clang-format  .clang-tidy  .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  yunpa.code-workspace
.github/workflows/: build.yaml  cmake.yaml
YoungPastry/: CMakeLists.txt
YoungPastry/src/: CMakeLists.txt  YoungPastry.cppm  main.cpp
YoungPastry/src/Scenes/: Title.cpp  Title.cppm
cmake/: TopLevel.cmake
libyunpa/: CMakeLists.txt
libyunpa/src/: CMakeLists.txt  libyunpa.cppm
libyunpa/src/Engine/: CMakeLists.txt  Core.cpp  Core.cppm  EventManager.cpp  EventManager.cppm  Scene.cpp  Scene.cppm  SceneManager.cpp  SceneManager.cppm  TermManager.cpp  TermManager.cppm
libyunpa/src/Graphics/: Box.cpp  Box.cppm  CMakeLists.txt  Color.cpp  Color.cppm  Colorable.cpp  Colorable.cppm  Drawable.cpp  Drawable.cppm  Element.cpp  Element.cppm  MaxSize.cpp  MaxSize.cppm  MinSize.cpp  MinSize.cppm  Positionable.cpp  Positionable.cppm  Screen.cpp  Screen.cppm  Sizable.cpp  Sizable.cppm  Text.cpp  Text.cppm
libyunpa/src/Graphics/Elements/: CMakeLists.txt  Text.cpp  Text.cppm
libyunpa/src/Graphics/Interfaces/: CMakeLists.txt  Colorable.cpp  Colorable.cppm  Drawable.cppm  Formattable.cpp  Formattable.cppm  Positionable.cpp  Positionable.cppm
libyunpa/src/System/: CMakeLists.txt  Events.cppm  Point2.cppm  Terminal.cppm  Time.cpp  Time.cppm  Unicode.cppm
